<resources>
    <string name="app_name">StoryApp</string>
    <string name="hint_email">Email : user@gmail.com</string>
    <string name="error_email">Email is incorrect</string>
    <string name="hint_pw">Password</string>
    <string name="error_pw">At least 8 characters</string>
    <string name="hint_username">Username</string>
    <string name="error_name">At least 3 characters</string>
    <string name="warning_input">incomplete data</string>
    <string name="success_register">Success to register account</string>
    <string name="failed_register">Failed to register account</string>
    <string name="check">invalid email or password</string>
    <string name="log_out">Logout</string>
    <string name="are_you_sure">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="not_out">Not come out</string>
    <string name="log_out_warning">You are successfully logged out!</string>
    <string name="AddStory">Add Story</string>
    <string name="success_AddStory">Success upload story</string>
    <string name="failed_AddStory">Failed to upload story</string>
    <string name="waning_AddStory">Complete the file and description!</string>
    <string name="SignIn"><u>Sign In</u></string>
    <string name="Register"><u>Register Here</u></string>
    <string name="Register2">Register</string>
    <string name="noaccount">Dont have an account?</string>
    <string name="haveaccount">Have an account?</string>
    <string name="Camere">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="storyapp">StoryApp</string>
    <string name="tagline">Let Your Stories Shine with StoryApp</string>
    <string name="select_image_first">Select an Image First</string>
    <string name="failed_retrieve_img">Failed to retrieve the image file</string>
    <string name="imagePreview">Image Preview</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>